# fintool

./: .gitignore  Cargo.toml  Readme.md
examples/: example_bank.csv  example_bank_with_headers.csv  example_investment.csv  example_investment_with_headers.csv
fintool/: Cargo.toml  fintool.smores-project
fintool/.smoresData/: Document-10000-Financial Tool Requirements.Md  Document-10000-Financtial Tool Requirements.Md
fintool/.smoresData/10000/: 10000.json  Text.txt
fintool/.smoresData/10100/: 10100.json
fintool/.smoresData/10200/: 10200.json
fintool/.smoresData/10300/: 10300.json  Text.txt
fintool/.smoresData/10400/: 10400.json
fintool/.smoresData/10600/: 10600.json  Text.txt
fintool/.smoresData/10700/: 10700.json
fintool/.smoresData/10800/: 10800.json
fintool/.smoresData/10900/: 10900.json  Text.txt
fintool/.smoresData/11000/: 11000.json
fintool/.smoresData/11100/: 11100.json
fintool/.smoresData/11200/: 11200.json
fintool/.smoresData/11300/: 11300.json
fintool/.smoresData/11400/: Text.txt
fintool/.smoresData/11500/: 11500.json
fintool/.smoresData/11600/: 11600.json  Text.txt
fintool/.smoresData/11700/: 11700.json  Text.txt
fintool/.smoresData/11800/: 11800.json  Text.txt
fintool/.smoresData/11900/: 11900.json
fintool/.smoresData/12000/: 12000.json  Text.txt
fintool/src/: main.rs
fintool/src/accounts/: bank_account.rs  certificate_of_deposit.rs  credit_card_account.rs  health_savings_account.rs  investment_account_manager.rs  mod.rs  retirement_401k_plan.rs  roth_ira.rs  wallet.rs
fintool/src/accounts/base/: budget.rs  charge_account.rs  fixed_account.rs  liquid_account.rs  mod.rs  variable_account.rs
fintool/src/app/: app.rs  mod.rs  screen.rs  ui.rs
fintool/src/database/: budget.rs  db_banks.rs  db_cd.rs  db_hsa.rs  db_user.rs  mod.rs
fintool/src/stocks/: mod.rs
fintool/src/tui/: mod.rs  tui_accounts.rs  tui_budgets.rs  tui_license.rs  tui_user.rs
fintool/src/types/: 401k.rs  accounts.rs  categories.rs  certificate_of_deposit.rs  credit_card.rs  hsa.rs  investments.rs  labels.rs  ledger.rs  mod.rs  participants.rs  roth_ira.rs  stock_prices.rs  transfer_types.rs
packaging/: Info.plist  build-macos-app.sh  icon.icns  launcher.sh
shared_lib/: Cargo.toml
shared_lib/src/: lib.rs  stocks.rs
src/: ledger.rs  main.rs  (+1 more)
(+71 files in other folders)
