[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
strum = "0.27.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-test = "0.4.3"
yahoo_finance_api = "2.2.0"
chrono = "0.4"
inquire = { version = "0.7.5", features = ["date"] }
time = "0.3.28"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

